PyAPI: ID property group returns wrong type with iter() #94121

Closed
opened 2021-12-15 19:00:02 +01:00 by Mateusz Kwaśniewski · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 3.0.0, caused by 265d97556a
Worked: version: 2.93.6

Short description of error
Using iter() on a ID property group returns non-iterator type IDPropertyGroupViewKeys.
Seems the change was made in 265d97556a.
This example code will now produce an error while it wasn't in previous versions:

C.active_object["test"] = { "key1": "val1", "key2" : "val2", "key3": "val3" }
for key in C.active_object["test"]:
    print(key)
TypeError: iter() returned non-iterator of type 'IDPropertyGroupViewKeys'

I think it should return IDPropertyGroupIterKeys instead to match the python 3.x dictionary behaviour. I made a simple change (not sure if that's a valid solution): in source/blender/python/generic/idprop_py_api.c in function BPy_IDGroup_iter() changed "return BPy_IDGroup_ViewKeys_CreatePyObject(self);" to "return BPy_IDGroup_IterKeys_CreatePyObject(self, false);" and that fixed it for me.

Exact steps for others to reproduce the error
Run the script mentioned above in the python console.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 3.0.0, caused by 265d97556a Worked: version: 2.93.6 **Short description of error** Using iter() on a ID property group returns non-iterator type IDPropertyGroupViewKeys. Seems the change was made in 265d97556a. This example code will now produce an error while it wasn't in previous versions: ``` C.active_object["test"] = { "key1": "val1", "key2" : "val2", "key3": "val3" } for key in C.active_object["test"]: print(key) ``` ``` TypeError: iter() returned non-iterator of type 'IDPropertyGroupViewKeys' ``` I think it should return IDPropertyGroupIterKeys instead to match the python 3.x dictionary behaviour. I made a simple change (not sure if that's a valid solution): in source/blender/python/generic/idprop_py_api.c in function BPy_IDGroup_iter() changed "return BPy_IDGroup_ViewKeys_CreatePyObject(self);" to "return BPy_IDGroup_IterKeys_CreatePyObject(self, false);" and that fixed it for me. **Exact steps for others to reproduce the error** Run the script mentioned above in the python console.

Added subscriber: @theHarven

Added subscriber: @theHarven
Mateusz Kwaśniewski changed title from PyAPI: ID property group returning wrong type with iter() to PyAPI: ID property group returns wrong type with iter() 2021-12-15 19:04:14 +01:00

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

If 265d97556a is actually the commit it caused, the change may have been intentional. So needs feedback from developers.

If 265d97556a is actually the commit it caused, the change may have been intentional. So needs feedback from developers.

Added subscriber: @mattli911

Added subscriber: @mattli911

I am hitting the issue on my own Addon as well, in Blender 3.1 Official Release.
Wondering now if I have to do some bigger refactor.. or how it impacts my code.

cutterVerts = []
        edgeVerts = []
        
        #Loop Object Dict/Data, from Modal,to get CV/EV Order to Proceed.
        for cv in context.object['TTEdgeCutterCV']:
            if(self.debug_mode):
                print(cv)
            cutterVerts += [int(cv)]

        for ev in context.object['TTEdgeCutterEV']:
            if(self.debug_mode):
                print(ev)
            edgeVerts += [int(ev)]

Python: Traceback (most recent call last):

  for cv in context.object['TTEdgeCutterCV']:

TypeError: iter() returned non-iterator of type 'IDPropertyGroupViewKeys'

I am hitting the issue on my own Addon as well, in Blender 3.1 Official Release. Wondering now if I have to do some bigger refactor.. or how it impacts my code. ``` cutterVerts = [] edgeVerts = [] #Loop Object Dict/Data, from Modal,to get CV/EV Order to Proceed. for cv in context.object['TTEdgeCutterCV']: if(self.debug_mode): print(cv) cutterVerts += [int(cv)] for ev in context.object['TTEdgeCutterEV']: if(self.debug_mode): print(ev) edgeVerts += [int(ev)] ``` Python: Traceback (most recent call last): ``` for cv in context.object['TTEdgeCutterCV']: ``` TypeError: iter() returned non-iterator of type 'IDPropertyGroupViewKeys'
Campbell Barton self-assigned this 2022-03-10 22:48:00 +01:00

This issue was referenced by 2b8d778a68

This issue was referenced by 2b8d778a68b53d63d8c897d5150951ecaecc6dc8

This issue was referenced by 27fb63381e

This issue was referenced by 27fb63381e9b0963976237c58ca2cfc9bc5ddfd8

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94121
No description provided.